# Qstream

./: .gitignore  CMakeLists.txt  Makefile  README.md  immplementationplan.md
include/: qstream.h
include/qsf/: arena.h  engine.h  error.h  file_access.h  format.h  kernels.h  platform.h  qsf.h  quant.h  sampling.h  tokenizer.h  types.h
src/: arena.c  cpu.c  engine.c  error.c  file_access.c  format.c  kernels.c  kernels_avx2.c  kernels_neon.c  kernels_scalar.c  kv_cache.c  main.c  platform.c  qsf.c  quant.c  runtime.c  sampling.c  tokenizer.c
tests/: test_core.c
tools/: convert_hf.py
